# papdl

./: .gitignore  Dockerfile  README.md  compile_dissertation.sh  dissertation.md  executor.py  pyproject.toml  requirements.txt  setup.sh  start.sh
bak/: Dockerfile  README.md  requirements.txt  start.sh
bak/papdl/: executor.py  generator2.py  speed_test.py
certs/: domain.crt  domain.key
examples/: define_model.py
inspector/: Dockerfile  run.sh
papdl/: executor.py  generator.py  generator2.py  loader.py  test_forward.py
papdl/containers/Dense/: Dockerfile
papdl/containers/Orchestrator/: Dockerfile
papdl/examples/: model_definition.py
papdl/papdl/: loader.py
papdl/papdl/block/: docker-compose.yml
scripts/: benchmark.sh  benchmarking_models.py  cifar_100.py  configure.sh  deploy.sh  evaluation.sh  memory_analysis.ipynb  memory_test.csv  memory_test.py  reset_docker.sh  slice.sh  temp.json  test.py  test_feed_forward_model.py
scripts/predictions/: vgg16.ipynb  vgg16.py
scripts/sample_ff_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
scripts/sample_ff_model/variables/: variables.index
src/papdl/: cli.py
src/papdl/backend/: _api_benchmark.py  _api_deploy.py  _api_iperf.py  _api_registry.py  api.py  api_common.py  common.py
src/papdl/benchmark/: benchmark.py  configure.py  main.py  predict.py  temp.py
src/papdl/clean/: main.py
src/papdl/configure/: configure.py  main.py
src/papdl/deploy/: deploy.py  main.py
tests/: test_dev.py
tests/dryopians/: docker-compose.yml
tests/fleetingness/: docker-compose.yml
tests/grieced/: docker-compose.yml
tests/mdse/: docker-compose.yml
tests/naturalisation/: docker-compose.yml
(+96 files in other folders)
