[tool.poetry]
name = "papdl"
version = "0.1.0"
description = ""
authors = ["Tamim Azmain <maat1@st-andrews.ac.uk>"]
readme = "README.md"
packages = [{include = "papdl", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.scripts]
papdl = "papdl.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
